--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -1,4 +1,4 @@
-<app-search [compare]="true"></app-search>
+<app-search [compare]="true" [detach_cdr]="true"></app-search>
 
 <div style="padding: 1px; overflow-x: auto;">
 
