--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -96,18 +96,29 @@
 
             <div class="container">
               <div class="row">
-                <div class="col-lg-2 col-sm-2 col-xs-4">
+                <div class="col-lg-3 col-sm-3 col-xs-4">
                   <div class="circle-tile ">
-                    <div class="circle-tile-heading dark-blue"><i class="fa fa-list fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-heading dark-blue"><i class="fa fa-user fa-fw fa-2x"></i></div>
                     <div class="circle-tile-content dark-blue">
-                      <div class="circle-tile-description text-faded"> Teams created</div>
-                      <div class="circle-tile-number text-faded ">{{stats.index_count}}</div>
+                      <div class="circle-tile-description text-faded">Registered users</div>
+                      <div class="circle-tile-number text-faded ">{{stats.player_count | NumberFilter}}</div>
                       <!--<a class="circle-tile-footer" href="#">More Info <i class="fa fa-chevron-circle-right"></i></a>-->
                     </div>
                   </div>
                 </div>
 
-                <div class="col-lg-2 col-sm-2 col-xs-4">
+                <div class="col-lg-3 col-sm-3 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading dark-blue"><i class="fa fa-list fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content dark-blue">
+                      <div class="circle-tile-description text-faded"> Teams created</div>
+                      <div class="circle-tile-number text-faded ">{{stats.index_count | NumberFilter}}</div>
+                      <!--<a class="circle-tile-footer" href="#">More Info <i class="fa fa-chevron-circle-right"></i></a>-->
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-3 col-xs-4">
                   <div class="circle-tile ">
                     <div class="circle-tile-heading dark-blue"><i class="fa fa-code fa-fw fa-2x"></i></div>
                     <div class="circle-tile-content dark-blue">
@@ -117,45 +128,45 @@
                   </div>
                 </div>
 
-                <div class="col-lg-2 col-sm-2 col-xs-4">
+                <div class="col-lg-3 col-sm-3 col-xs-4">
                   <div class="circle-tile ">
-                    <div class="circle-tile-heading red"><i class="fa fa-university fa-fw fa-2x"></i></div>
-                    <div class="circle-tile-content red">
-                      <div class="circle-tile-description text-faded"> Fireship cities</div>
-                      <div class="circle-tile-number text-faded ">{{stats.fire_count | NumberFilter}}</div>
+                    <div class="circle-tile-heading dark-blue"><i class="fa fa-university fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content dark-blue">
+                      <div class="circle-tile-description text-faded"> Unique towns</div>
+                      <div class="circle-tile-number text-faded ">{{stats.town_count | NumberFilter}}</div>
                     </div>
                   </div>
                 </div>
 
-                <div class="col-lg-2 col-sm-2 col-xs-4">
-                  <div class="circle-tile ">
-                    <div class="circle-tile-heading blue"><i class="fa fa-university fa-fw fa-2x"></i></div>
-                    <div class="circle-tile-content blue">
-                      <div class="circle-tile-description text-faded"> Mythical cities</div>
-                      <div class="circle-tile-number text-faded ">{{stats.myth_count | NumberFilter}}</div>
-                    </div>
-                  </div>
-                </div>
+<!--                <div class="col-lg-2 col-sm-2 col-xs-4">-->
+<!--                  <div class="circle-tile ">-->
+<!--                    <div class="circle-tile-heading dark-blue"><i class="fa fa-university fa-fw fa-2x"></i></div>-->
+<!--                    <div class="circle-tile-content dark-blue">-->
+<!--                      <div class="circle-tile-description text-faded"> Fireship cities</div>-->
+<!--                      <div class="circle-tile-number text-faded ">{{stats.fire_count | NumberFilter}}</div>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
 
-                <div class="col-lg-2 col-sm-2 col-xs-4">
-                  <div class="circle-tile ">
-                    <div class="circle-tile-heading green"><i class="fa fa-user fa-fw fa-2x"></i></div>
-                    <div class="circle-tile-content green">
-                      <div class="circle-tile-description text-faded"> Enemy players</div>
-                      <div class="circle-tile-number text-faded ">{{stats.player_count | NumberFilter}}</div>
-                    </div>
-                  </div>
-                </div>
+<!--                <div class="col-lg-2 col-sm-2 col-xs-4">-->
+<!--                  <div class="circle-tile ">-->
+<!--                    <div class="circle-tile-heading dark-blue"><i class="fa fa-university fa-fw fa-2x"></i></div>-->
+<!--                    <div class="circle-tile-content dark-blue">-->
+<!--                      <div class="circle-tile-description text-faded"> Mythical cities</div>-->
+<!--                      <div class="circle-tile-number text-faded ">{{stats.myth_count | NumberFilter}}</div>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
 
-                <div class="col-lg-2 col-sm-2 col-xs-4">
-                  <div class="circle-tile ">
-                    <div class="circle-tile-heading green"><i class="fa fa-users fa-fw fa-2x"></i></div>
-                    <div class="circle-tile-content green">
-                      <div class="circle-tile-description text-faded"> Enemy alliances</div>
-                      <div class="circle-tile-number text-faded ">{{stats.alliance_count | NumberFilter}}</div>
-                    </div>
-                  </div>
-                </div>
+<!--                <div class="col-lg-2 col-sm-2 col-xs-4">-->
+<!--                  <div class="circle-tile ">-->
+<!--                    <div class="circle-tile-heading green"><i class="fa fa-users fa-fw fa-2x"></i></div>-->
+<!--                    <div class="circle-tile-content green">-->
+<!--                      <div class="circle-tile-description text-faded"> Enemy alliances</div>-->
+<!--                      <div class="circle-tile-number text-faded ">{{stats.alliance_count | NumberFilter}}</div>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
 
               </div>
             </div>
@@ -167,7 +178,7 @@
 				<div class="container">
 					<div class="col-xs-10 col-xs-offset-1 text-center">
 						<br/>
-						<h2 class="gd-secondary">Preview gallery</h2>
+						<h2 class="gd-secondary">Preview</h2>
 						<img class="img-thumbnail" src="../../assets/images/indexer.png" alt="Enemy city indexer">
 					</div>
 				</div>
